--- a/CRUD-app/index.html
+++ b/CRUD-app/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CRUD-app</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
@@ -129,6 +130,7 @@
         });
         });
     </script>
+    <script src="script/script.js"></script>
 
 </body>
 </html>
