--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <span></span>
           ToDo-list
         </a>
-        <a class="button" href="#" style="--color: #ff1867;">
+        <a class="button" href="CRUD-app/index.html" style="--color: #ff1867;">
           <span></span>
           <span></span>
           <span></span>
